--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/t-kikuc/note.git"
+    "url": "https://github.com/t-kikuc/devto.git"
   },
   "license": "MIT"
-} 
+}
